@@ -1,3 +1,12 @@
+[b][color=orange]v4.57 for Shadowland PrePatch[/color], 17.10.2020[/b][list]
+[*]Updated my DPS Layout due to some backdrop changes in ElvUI
+[*]Fixed an error in LFG Info
+[*]Updated my MicroBar, its now more customizable
+[*]Due to the updated MicroBar, i've also deleted my middle DataText Panel
+[*]Updated my Minimap Ping
+[*]Removed RaidCD, use a WeakAura instead or w/e[/list]
+
+
 [b][color=orange]v4.56 for Shadowland PrePatch[/color], 14.10.2020[/b][list]
 [*]Adjusted QuestInfo skin to show colored progress again.
 [*]Fix my skin for ClassColored ScrollBars. >.>
